# UGV_Follower

./: .gitignore  .rosinstall  .rosinstall.bak
Fast-Planner/fast_planner/plan_env/include/plan_env/: sdf_map.h
Fast-Planner/fast_planner/plan_env/src/: sdf_map copy.cpp  sdf_map.cpp
Fast-Planner/fast_planner/plan_manage/: CMakeLists.txt
Fast-Planner/fast_planner/plan_manage/config/: traj.rviz
Fast-Planner/fast_planner/plan_manage/include/plan_manage/: kino_replan_fsm.h  topo_replan_fsm.h
Fast-Planner/fast_planner/plan_manage/launch/: kino_algorithm.xml  kino_replan.launch  simulator.xml
Fast-Planner/fast_planner/plan_manage/src/: kino_replan_fsm.cpp  traj_server copy.cpp  traj_server.cpp
Fast-Planner/fast_planner/traj_utils/include/traj_utils/: planning_visualization.h
Fast-Planner/fast_planner/traj_utils/src/: planning_visualization.cpp
RNE_drone_tracking/REN_gazebo/: CMakeLists.txt  package.xml
RNE_drone_tracking/REN_gazebo/launch/: sim_setup.launch
RNE_drone_tracking/REN_gazebo/scripts/: robot_waypoint.py  simple_takeoff.py
RNE_drone_tracking/REN_gazebo/src/: offb_vel (another copy).cpp  offb_vel (copy).cpp  offb_vel.cpp
car_tracker/: camera_subscriber.py  mavros_commander.py  tracker_controller.py
car_tracker_yolo/: CMakeLists.txt  package.xml
car_tracker_yolo/launch/: car_tracker.launch
car_tracker_yolo/msg/: Detection2D.msg  Detection2DArray.msg
car_tracker_yolo/scripts/: yolo_controll.py  yolo_detector_node.py
ee478/: CMakeLists.txt  package.xml
ee478/scripts/: ee478_offboard_velocity (copy).py  ee478_offboard_velocity.py  global_planner.py
target_detector/: CMakeLists.txt  package.xml
target_detector/include/target_detector/: target_detector.h
target_detector/launch/: target_detector_simple.launch
target_detector/src/: target_detector_fusion.cpp  target_detector_simple (another copy).cpp  target_detector_simple (copy).cpp  target_detector_simple.cpp
yolo_v11_inference/: CMakeLists.txt  package.xml
yolo_v11_inference/scripts/: detection_bbox.py  detection_bbox_backup.py  detection_pos.py  detection_pos_backup.py  detection_pos_seg.py  detection_pos_trt.py  detection_seg.py  final_pointcloud_filter_.py  final_pose2tf_.py  final_pose_estimation_.py  yolo_inference (copy).py  yolo_inference.py
yolo_v11_inference/src/: final_pointcloud_filter.cpp  final_pose_estimation.cpp  target_pointcloud_filter_node.cpp  target_pose_estimation_node.cpp  target_pose_to_tf_node.cpp  tfbroadcaster.cpp
